--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,9 @@
 {
   "extends": [
-    "@rocketseat/eslint-config/react"
-    // "next/core-web-vitals"
-  ]
+    "@rocketseat/eslint-config/react",
+    "next/core-web-vitals"
+  ],
+  "rules": {
+    "camelcase": "off"
+  }
 }
-
