--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "@types/react": "18.2.16",
     "@types/react-dom": "18.2.7",
     "axios": "^1.5.0",
-    "eslint": "8.45.0",
+    "eslint": "^8.45.0",
     "eslint-config-next": "13.4.12",
     "next": "13.4.12",
     "next-auth": "^4.23.1",
     "nookies": "^2.5.2",
     "phosphor-react": "^1.4.1",
+    "prettier": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
